fixing spacing

--- a/client/apps/user_tool/styles/partials/_modal.scss
+++ b/client/apps/user_tool/styles/partials/_modal.scss
@@ -78,7 +78,7 @@
   justify-content: flex-end;
   flex-wrap: wrap;
 
-  .btn--outline{
+  .btn--outline, .is-red{
     margin-right: 0.6rem;
   }
 
